deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dianchi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dianchi
  template:
    metadata:
      labels:
        app: dianchi
    spec:
      containers:
        - name: dianchi
          image: dianchi.azurecr.cn/dianchi:latest
          imagePullSecrets:
            - name: azurecrkey
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          ports:
            - containerPort: 80
